[tool.poetry]
name = "langgraph-checkpoint-oracle"
version = "2.0.0rc8"
description = "Library with an Oracle Database implementation of LangGraph checkpoint saver."
authors = ["yoshidan <naohiro.y@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yoshidan/langgraph-checkpoint"
packages = [{ include = "langgraph" }]

[tool.poetry.dependencies]
python = "^3.9.0,<4.0"
langgraph-checkpoint = "^2.0.21"
orjson = ">=3.10.1"
oracledb = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
codespell = "^2.2.0"
pytest = "^7.2.1"
anyio = "^4.4.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
mypy = "^1.10.0"
langgraph-checkpoint = "2.0.25"
langgraph = ">=0.2.0"
pytest-watcher = { version = ">=0.4.3", python = "<4.0" }

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 -vv"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "I",  # isort
]
lint.ignore = ["E501", "B008", "UP007", "UP006"]

[tool.mypy]
disallow_untyped_defs = "True"
explicit_package_bases = "True"
warn_no_return = "False"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
allow_redefinition = "True"
disable_error_code = "typeddict-item, return-value, unused-ignore"

[tool.pytest-watcher]
now = true
delay = 0.1
runner_args = ["--ff", "-x", "-v", "--tb", "short"]
patterns = ["*.py"] 